# YATE

./: .gitignore  CMakeLists.txt  Readme.md
.cache/clangd/index/: append_buffer.c.D9E2AC94E9E62883.idx  append_buffer.h.3CFA9CE256EE7302.idx  config_reader.c.0A3F1FEEF22752A6.idx  config_reader.h.F86BDF7E39A481B8.idx  copy_buffer.c.E4DF5AF7D7416BA0.idx  copy_buffer.h.0EF7A260564F83D2.idx  editor.c.E79FFD05000E48F8.idx  editor.h.11C1243C9B953550.idx  main.c.883F3596E9E75E4A.idx  syntax.c.C0853578BE7B31C7.idx  syntax.h.12F9077F18E8EACB.idx
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  codeql.yml
docs/: annotated.html  annotated_dup.js  append__buffer_8c.html  append__buffer_8c.js  append__buffer_8h.html  append__buffer_8h.js  append__buffer_8h_source.html  classes.html  config__reader_8c.html  config__reader_8c.js  config__reader_8h.html  config__reader_8h.js  config__reader_8h_source.html  copy__buffer_8c.html  copy__buffer_8c.js  copy__buffer_8h.html  copy__buffer_8h.js  copy__buffer_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  editor_8c.html  editor_8c.js  editor_8h.html  editor_8h.js  editor_8h_source.html  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  main_8c.js  main_8dox.html  menudata.js  (+19 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  (+30 more)
scripts/: build_and_run.sh  docs.sh  format.bat  install.sh  zip.sh
src/: CMakeLists.txt  Doxyfile  append_buffer.c  append_buffer.h  config_reader.c  config_reader.h  copy_buffer.c  copy_buffer.h  editor.c  editor.h  main.c  main.dox  project_config.h.in  syntax.c  syntax.h
